<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/purple_500">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".MainActivity"
    android:background="@color/purple_500">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/amount"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/questions"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/win"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:gravity="center"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/amount"
        app:layout_constraintBottom_toTopOf="@id/QuitButton"
        android:orientation="vertical"
        android:id="@+id/questions"
        android:paddingTop="75dp"
        android:paddingBottom="80dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:id="@+id/Question"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/options">
            <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <TableRow>
                    <RadioButton
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:id="@+id/Option1"
                        android:layout_height="wrap_content"
                        android:text="@string/option_1_a"
                        android:textColor="@color/white">
                    </RadioButton>
                    <RadioButton
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:id="@+id/Option2"
                        android:layout_height="wrap_content"
                        android:text="@string/option_1_b"
                        android:textColor="@color/white">
                    </RadioButton>
                </TableRow>

                <TableRow>
                    <RadioButton
                        android:layout_weight="1"
                        android:id="@+id/Option3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/option_1_c"
                        android:textColor="@color/white">
                    </RadioButton>
                    <RadioButton
                        android:layout_weight="1"
                        android:id="@+id/Option4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/option_1_d"
                        android:textColor="@color/white">
                    </RadioButton>
                </TableRow>
            </TableLayout>
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Submit"
            android:textColor="@color/white"
            android:background="@drawable/button_dark_green"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:id="@+id/SubmitButton"
            android:onClick="Submit"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/questions"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/quit"
        android:textColor="@color/white"
        android:id="@+id/QuitButton"
        android:onClick="Quit"/>

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
